# bm_netif

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yml
analog_devices_driver/: adin1110.c  adin1110.h
analogdevicesinc/: CMakeLists.txt  README.md
analogdevicesinc/platform/stm32/: main.h
analogdevicesinc/platform/stm32/generated_u575/: stm32u575xx.h  stm32u5xx.h
cmake/: arm-gcc-toolchain.cmake  clang-arm-gcc-toolchain.cmake
include/: adi_bsp.h  adi_hal.h  adi_hal_port_specific.h  adi_mac.h  adin2111.h  bm_adin2111.h  hal.h  network_interface.h  receiver.h
include/stm32u5/: hal_port_specific.h
src/: adi_bsp.c  adi_fcs.c  adi_mac.c  adi_spi_oa.c  adin2111.c  bm_adin2111.c
test/: CMakeLists.txt
test/src/: bm_adin2111_test.cpp
